Update and rename index.php to index.html

--- a/index.html
+++ b/index.html
@@ -278,9 +278,9 @@ class="untree_co-hero" id="home" style=" width: 100%; height: 100vh; background-
 <h4 class="heading">Themis-Us</h4>
 </div>
 <div class="mb-4" data-aos="fade-up" data-aos-delay="100">
-<p>Themis-Us adalah sebuah multi tool.</p>
+<p>Themis adalah sosok dewi yang siap menebas setiap keangkaramurkaan yang terjadi. Tentu dengan tanpa pandang bulu. Dalam legenda Yunani Kuno terdapat kisah tentang Dewi Themis tentang keadilan yang coba dihadirkan manusia sebagai sebagai wakil Tuhan di muka bumi.</p>
 
-<p>Hahahah hayuk</p>
+<p>Themis-Us adalah sebuah web application yang memiliki tool bernama "The Lady" yang mana the lady ini memiliki banyak lelaki yang mana merepresentasikan banyaknya tool yang terinspirasi dari lscript</p>
 </div>
 <!-- <ul class="list-unstyled ul-check primary mb-4" data-aos="fade-up" data-aos-delay="200">
 <li>There live the blind texts</li>
