--- a/index.html
+++ b/index.html
@@ -385,9 +385,9 @@ Copyright &copy;<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728
 		var keluhan = document.getElementById("keluhan").value;
 		var whatsapp = document.getElementById("whatsapp").value;
 		var message = document.getElementById("message").value;
-		var allmessage = "Hallo admin OTW Kampus, Saya "+nama+". Saya mengalami kendala terkait "+keluhan+", yaitu : "+message+". Mohon bantuannya ya kak, terima kasih^^. Tolong segera di balas di nomer whatsapp https://wa.me/"+whatsapp;
+		var allmessage = "Hallo admin Themis-Us, Saya "+nama+". Saya mengalami kendala terkait "+keluhan+", yaitu : "+message+". Mohon bantuannya Admin, terima kasih^^. Tolong segera di balas di nomer whatsapp https://wa.me/"+whatsapp;
 		// console.log(allmessage);
-		window.location.href='https://wa.me/6289504491996/?text='+allmessage;
+		window.location.href='https://wa.me/6285155188903/?text='+allmessage;
 	}
 </script>
 
