--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 <li><a href="#kontak" class="nav-link">Kontak</a></li>
 </ul>
 <ul class="js-clone-nav d-none mt-1 d-lg-inline-block site-menu float-right">
-<li class="cta-primary"><a href="login.php">Login</a></li>
-<li class="cta-button-outline"><a href="register.php">Register</a></li>
+<li class="cta-primary"><a href="login.html">Login</a></li>
+<li class="cta-button-outline"><a href="register.html">Register</a></li>
 </ul>
 <a href="" class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block light d-lg-none" data-toggle="collapse" data-target="#main-navbar">
 <span></span>
@@ -115,7 +115,7 @@ class="untree_co-hero" id="home" style=" width: 100%; height: 100vh; background-
 <p data-aos="fade-up" data-aos-delay="200" class="upmarg">
 <img class="themis-txt img" src="images/lp/themis-text.png" alt="Image">
 <h4 style="font-family: montagu; color:white;">Themis-Us</h4><br><br>
-<h6 style="font-family: montagu; color:white;">Untuk menggunakan The Lady <br><br><br><a class="btn btn-outline-primary smoothscroll" href="login.php">Login</a> atau <a class="btn btn-outline-primary smoothscroll" href="register.php">Register</a></h6>
+<h6 style="font-family: montagu; color:white;">Untuk menggunakan The Lady <br><br><br><a class="btn btn-outline-primary smoothscroll" href="login.html">Login</a> atau <a class="btn btn-outline-primary smoothscroll" href="register.html">Register</a></h6>
 </p>
 </div> 
 </div> 
