--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ class="untree_co-hero" id="home" style=" width: 100%; height: 100vh; background-
 	Frame “The Lady”
 	</li>
 </blockquote>
-<strong class="d-block">Azhar Surya Pratama,</strong><span class="d-block">20.83.xxxx</span>
+<strong class="d-block">Azhar Surya Pratama,</strong><span class="d-block">20.83.0550</span>
 </div>
 </div>
 </div>
