--- a/register.html
+++ b/register.html
@@ -32,7 +32,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm mx-md-auto">
-                <img src="https://cdnb.artstation.com/p/assets/images/images/009/309/057/large/anton-_-crest-occlusion-1024.jpg" class="rounded img-fluid float-start w-100" alt="yugioh change of heart">
+                <img src="https://cdnb.artstation.com/p/assets/images/images/009/309/057/large/anton-_-crest-occlusion-1024.jpg" class="rounded img-fluid float-start w-100" alt="wolhaiksong logo ToG">
             </div>
             <div class="col-sm container-fluid ms-xl-0">
                 <div class="container rounded float-end container-fluid">
