--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ class="untree_co-hero" id="home" style=" width: 100%; height: 100vh; background-
 	Desain flow “The Lady”
 	</li>
 </blockquote>
-<strong class="d-block">Adam Firdaus,</strong><span class="d-block">20.83.xxxx</span>
+<strong class="d-block">Adam Firdaus,</strong><span class="d-block">20.83.0556</span>
 </div>
 </div>
 </div>
@@ -270,7 +270,7 @@ class="untree_co-hero" id="home" style=" width: 100%; height: 100vh; background-
 <div class="container">
 <div class="row justify-content-between">
 <div class="col-lg-8" data-aos="fade-up" data-aos-delay="100">
-<img style="width: 45%;height: 80%; margin-left: 200px;" src="images/themis-about.png" alt="Image" class="img-fluid">
+<img style="width: 45%;height: 80%; margin-left: 120px;" src="images/themis-about.png" alt="Image" class="img-fluid">
 </div> 
 <div class="col-lg-4">
 <div class="mb-4" data-aos="fade-up" data-aos-delay="0">
