--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			}
 		}
 			@font-face{
-				font-family: 'montagu'
+				font-family: 'montagu';
 				src:url('fonts/montagu/MontaguSlab-VariableFont_opsz,wght.ttf');
 			}
 </style>	
@@ -85,11 +85,10 @@
 <nav class="site-nav light js-site-navbar mb-5 site-navbar-target">
 <div class="container">
 <div class="site-navigation">
-<a href="" class="#"><img style="width:120px; height: 50px;" src="images/themis-us-logo.png" class="logo m-0 float-left"></a>
+<a href="" class="#"><img style="width:120px; height: 50px;" src="images/themis-us-logo.png" class="logo m-0 float-left" alt=""></a>
 <ul class="js-clone-nav d-none d-lg-inline-block site-menu float-left">
 <li class="active"><a href="#home" class="nav-link">Home</a></li>
 <li ><a href="#keunggulan" class="nav-link">Keunggulan</a></li>
-</li>
 <li><a href="#team" class="nav-link">Team</a></li>
 <li><a href="#tentang" class="nav-link">Tentang Themis-Us</a></li>
 <li><a href="#kontak" class="nav-link">Kontak</a></li>
@@ -112,11 +111,11 @@ class="untree_co-hero" id="home" style=" width: 100%; height: 100vh; background-
 <img class="terbang themis" src="images/lp/themis animation.png" alt="Image" class="img">
 </div> 
 <div class="col-lg-8 justify-content-center col-sm-10 " >
-<p data-aos="fade-up" data-aos-delay="200" class="upmarg">
-<img class="themis-txt img" src="images/lp/themis-text.png" alt="Image">
-<h4 style="font-family: montagu; color:white;">Themis-Us</h4><br><br>
-<h6 style="font-family: montagu; color:white;">Untuk menggunakan The Lady <br><br><br><a class="btn btn-outline-primary smoothscroll" href="login.html">Login</a> atau <a class="btn btn-outline-primary smoothscroll" href="register.html">Register</a></h6>
-</p>
+<div data-aos="fade-up" data-aos-delay="200" class="upmarg">
+	<img class="themis-txt img" src="images/lp/themis-text.png" alt="Image">
+	<h4 style="font-family: montagu; color:white;">Themis-Us</h4><br><br>
+	<h6 style="font-family: montagu; color:white;">Untuk menggunakan The Lady <br><br><br><a class="btn btn-outline-primary smoothscroll" href="login.html">Login</a> atau <a class="btn btn-outline-primary smoothscroll" href="register.html">Register</a></h6>
+</div>
 </div> 
 </div> 
 </div> 
