--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <link rel="stylesheet" href="css/aos.css">
 <link rel="stylesheet" href="css/style.css">
 <title>Themis-Us</title>
-<style type="text/css">
+<style>
 
 		@media (max-width: 992px) { 
 			#home {
@@ -108,7 +108,7 @@ class="untree_co-hero" id="home" style=" width: 100%; height: 100vh; background-
 <div class="container">
 <div class="row align-items-center">
 <div class="col-lg-4 ml-auto order-lg-2" data-aos="fade-right" data-aos-delay="400">
-<img class="terbang themis" src="images/lp/themis animation.png" alt="Image" class="img">
+<img class="terbang themis" src="images/lp/themis%20animation.png" alt="Image">
 </div> 
 <div class="col-lg-8 justify-content-center col-sm-10 " >
 <div data-aos="fade-up" data-aos-delay="200" class="upmarg">
