--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@ class="untree_co-hero" id="home" style=" width: 100%; height: 100vh; background-
 </div> 
 </div>
 </div> 
+</div> 
 <div class="untree_co-section" id="team">
 <div class="container">
 <div class="row">
@@ -208,12 +209,14 @@ class="untree_co-hero" id="home" style=" width: 100%; height: 100vh; background-
 <div>
 <br>
 <blockquote>
+	<ul>
 	<li>
 	Web Design "Themis-Us"
 	</li>
 	<li>	
 	Embedding tool kedalam “The Lady”
 	</li>
+	</ul>
 </blockquote>
 <strong class="d-block">Raihan Rinto Andiansyah,</strong><span class="d-block">20.83.0572</span>
 </div>
@@ -231,9 +234,11 @@ class="untree_co-hero" id="home" style=" width: 100%; height: 100vh; background-
 <div>
 <br>
 <blockquote>
+	<ul>
 	<li>	
 	Frame “The Lady”
 	</li>
+	</ul>
 </blockquote>
 <strong class="d-block">Azhar Surya Pratama,</strong><span class="d-block">20.83.0550</span>
 </div>
@@ -251,9 +256,11 @@ class="untree_co-hero" id="home" style=" width: 100%; height: 100vh; background-
 <div>
 <br>
 <blockquote>
+	<ul>
 	<li>	
 	Desain flow “The Lady”
 	</li>
+	</ul>
 </blockquote>
 <strong class="d-block">Adam Firdaus,</strong><span class="d-block">20.83.0556</span>
 </div>
@@ -261,7 +268,8 @@ class="untree_co-hero" id="home" style=" width: 100%; height: 100vh; background-
 </div>
 </div> 
 </div>
-</div> 
+</div>
+</div>
 </div> 
 </div> 
 <div class="untree_co-section" id="tentang">
@@ -377,7 +385,7 @@ Copyright &copy;<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728
 <script src="js/jquery.fancybox.min.js"></script>
 <script src="js/aos.js"></script>
 <script src="js/custom.js"></script>
-<script type="text/javascript">
+<script>
 	function kirimpesan(){
 		var nama = document.getElementById("nama").value;
 		var keluhan = document.getElementById("keluhan").value;
